--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: CI
 on: 
   push:
-    branches:
-      - master
+      branches:
+        - master
 jobs:
-  build:
+  contoso:
     runs-on: ubuntu-latest
     steps:            
     - uses: actions/checkout@v2
@@ -26,9 +26,9 @@ jobs:
       with:
         name: website
         path: /home/runner/work/TheatreersImprov/TheatreersImprov/public
-  publish:
+  publish:    
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: contoso
     steps:    
     - name: Download website changes
       uses: actions/download-artifact@v1
@@ -37,7 +37,11 @@ jobs:
     - name: Azure Login
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}    
+    - name: output secret
+      shell: bash
+      run: |
+        echo ${{ secrets.AZURE_CREDENTIALS }}  
     - name: Azure CLI script
       uses: azure/CLI@v1
       with:
