--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,20 @@ on:
       branches:
         - master
 jobs:
-  contoso:
+  build:
+    strategy:
+      matrix:        
+        key: [europe, states, australia]
+        include:
+          - key: europe
+            region: "North Europe"
+            abbreviation: "neu"
+          - key: states
+            region: "West US 2"
+            abbreviation: "wus2"
+          - key: australia
+            region: "Australia Central"
+            abbreviation: "ausc"
     runs-on: ubuntu-latest
     steps:            
     - uses: actions/checkout@v2
@@ -28,7 +41,7 @@ jobs:
         path: /home/runner/work/TheatreersImprov/TheatreersImprov/public
   publish:    
     runs-on: ubuntu-latest
-    needs: contoso
+    needs: build
     steps:    
     - name: Download website changes
       uses: actions/download-artifact@v1
@@ -43,7 +56,7 @@ jobs:
       with:
         azcliversion: 2.0.72
         inlineScript: |
-          az storage blob upload-batch --account-name theatreers -d '$web' -s website
+          az storage blob upload-batch --account-name theatreers${{ matrix.abbreviation }} -d '$web' -s website
     - name: Azure CLI script
       uses: azure/CLI@v1
       with:
