--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: website
-        path: /home/runner/work/TheatreersImprov/TheatreersImprov/public
+        path: '${{ GITHUB_WORKSPACE }}/public'
   publish:    
     strategy:
       matrix:        
